--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,19 @@ figcaption {
   margin: 0 auto;
   background: #eee;
 }
+
+.col-1 {
+  float: left;
+  width: 32%;
+  background: #ccc;
+}
+
+.col-2 {
+  float: left;
+  width: 32%;
+  background: #ccc;
+}
+
+.col-3 {
+  background: #ccc;
+}
